overflow error fixed

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -5,8 +5,6 @@
 }
 body{
     color: white;
-    overflow: hidden;
-
 }
 .navbar-brand img{
     height: 3rem;
